@@ -8,11 +8,12 @@ level ChangeLog file.
 should be inlcluded here. Other changes should simply be in the top level
 ChangeLog.
 
-Ob types   : SAVEBED, POISON, CF_HANDLE
+Ob types   : SAVEBED, POISON, CF_HANDLE, TREASURE
 Events     : apply
 Moved from : ../server/apply.c, legacy/apply.c
-Moved to   : savebed/savebed.c, poison/poison.c, cf_handle/cf_handle.c
-Comment    : Moved apply code for savebeds, poison, and cf_handle.
+Moved to   : savebed/savebed.c, poison/poison.c, cf_handle/cf_handle.c,
+             treasure/treasure.c
+Comment    : Moved apply code for savebeds, poison, cf_handle, and treasure.
 2007-11-21 - Alex Schultz
 --
 Ob types   : FOOD, DRINK, FLESH
