@@ -15,7 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
-Refactor savebed, poison, and cf_handle code.
+Refactor savebed, poison, cf_handle, and treasure code.
 Generalize 'killer' message for poison objects.
     server/ob_types.c
     server/apply.c
@@ -27,6 +27,7 @@ Generalize 'killer' message for poison objects.
     types/savebed/savebed.c
     types/poison/poison.c
     types/cf_handle/cf_handle.c
+    types/treasure/treasure.c
 Alex Schultz 2007-11-21
 
 Added support for compound spellcasting animations
